# mldrone

./: .env.example  .gitignore  README.md  SUIVI_PROJET.md  pyproject.toml
docs/: LEAKAGE_PROOF.md  REFERENTIEL_DRONEDETECT_RFCLASSIFICATION.md  data_collection_methodology.md  ennonce_projet_final.md
docs/diagrams/: pipeline_cnn.dot  pipeline_global.dot  pipeline_rfuavnet.dot  pipeline_svm.dot
interface/: app.py  settings.py
interface/media/: model_comparison_results.csv
interface/models/: __init__.py  base.py  cnn.py  rfuavnet.py  svm.py
interface/services/: __init__.py  model_viz_service.py  visualization_service.py
interface/static/: glossary.json
interface/views/: __init__.py  glossary_view.py  home_view.py  inference_view.py  model_comparison_view.py
models/: resnet50_cnn.pth:Zone.Identifier  rfuavnet_iq (1).pth:Zone.Identifier  vgg16_cnn (1).pth:Zone.Identifier
notebooks/: 001_exploration_general.ipynb  002_exploration_temporal.ipynb  003_exploration_frequentiel.ipynb  004_exploration_frequentiel_advanced.ipynb  006_downsampling_analysis.ipynb  012_preprocessing_psd.ipynb  013_preprocessing_spectrogram.ipynb  014_preprocessing_iq.ipynb  015_preprocessing.ipynb  021_training_svm.ipynb  021_training_svm_COLAB.ipynb  022_training_cnn.ipynb  022_training_cnn_COLAB.ipynb  023_training_rfuavnet.ipynb  023_training_rfuavnet_COLAB.ipynb  031_model_comparison.ipynb  031_model_comparison_COLAB.ipynb
notebooks/data/: metadata_cache.parquet
src/dronedetect/: __init__.py  config.py  data_loader.py  export_samples.py  features.py  models.py  pipeline.py  preprocessing.py  (+3 more)
tests/: test_data_integrity.py
